# nsecbunker

./: README.md  __init__.py  config.json  crud.py  description.md  discovery.py  helpers.py  manifest.json  migrations.py  models.py  pyproject.toml  services.py  tasks.py  views.py  views_api.py
docs/: specification.md
docs/plans/: 2026-02-27-nsecbunker-audit-design.md  2026-02-27-nsecbunker-audit.md
static/js/: index.js
templates/nsecbunker/: index.html
tests/: test_api_security_contracts.py  test_models_pydantic_compat.py  test_permission_key_ownership.py  test_rate_limit_persistence.py  test_sign_event_permission_binding.py  test_ui_metadata_contracts.py
